--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <div class="space stars2"></div>
     <div class="space stars3"></div>
 
+    <section class="holdings">
+        <div class="price">HOLDINGS</div>
+        <p class="price">Atla : <span id="atla">87%</span></p>
+        <p class="price">Pai : <span id="pai">13%</span></p>
+    </section>
+
     <section class="main">
         <div id="image" ></div>
         <div class="price">Bought price : <span id="bought_price">0.75 ETH</span></div>
